# ComputerGraphicsMastersProject

./: .gitignore  CMakeLists.txt  README.md  construct_project.sh  main_function_contructor.sh  rotating_triangle_code.backup
src/accessibility_features/: CMakeLists.txt
src/advanced_rendering_techniques/: CMakeLists.txt
src/advanced_shaders/: CMakeLists.txt
src/artificial_intelligence/: CMakeLists.txt
src/audio_integration/: CMakeLists.txt
src/basic_triangle_rendering/: CMakeLists.txt  README.md  main.cpp
src/community_engagement/: CMakeLists.txt
src/compute_shaders/: CMakeLists.txt
src/continuous_integration_and_deployment/: CMakeLists.txt
src/continuous_learning_and_improvement/: CMakeLists.txt
src/cross_platform_compatibility/: CMakeLists.txt
src/custom_shaders/: CMakeLists.txt
src/debugging_and_profiling/: CMakeLists.txt
src/deferred_rendering/: CMakeLists.txt
src/documentation_and_tutorials/: CMakeLists.txt
src/error_handling_and_logging/: CMakeLists.txt  main.cpp
src/frame_timing_and_control/: CMakeLists.txt
src/framebuffer_effects/: CMakeLists.txt
src/framebuffer_objects/: CMakeLists.txt
src/geometry_instancing/: CMakeLists.txt
src/gui_integration/: CMakeLists.txt
src/input_handling/: CMakeLists.txt
src/lighting/: CMakeLists.txt
src/localization_and_internationalization/: CMakeLists.txt
src/memory_management/: CMakeLists.txt
src/model_loading/: CMakeLists.txt
src/multi_pass_rendering/: CMakeLists.txt
src/multi_threading/: CMakeLists.txt
src/networking/: CMakeLists.txt
src/opengl_interoperability/: CMakeLists.txt
src/particle_systems/: CMakeLists.txt
src/performance_optimization/: CMakeLists.txt
src/physics_integration/: CMakeLists.txt
src/post_processing_effects/: CMakeLists.txt
src/resource_management/: CMakeLists.txt
src/scene_graphs/: CMakeLists.txt
src/scene_rendering_and_management/: CMakeLists.txt
src/security_measures/: CMakeLists.txt
src/serialization_and_deserialization/: CMakeLists.txt
src/shading/: CMakeLists.txt
src/shadow_mapping/: CMakeLists.txt
src/terrain_generation/: CMakeLists.txt
src/texture_compression/: CMakeLists.txt
src/texturing/: CMakeLists.txt
src/transformations/: CMakeLists.txt
src/user_interaction/: CMakeLists.txt
src/version_control_integration/: CMakeLists.txt
src/virtual_reality_support/: CMakeLists.txt
src/webgl_integration/: CMakeLists.txt
