cmake_minimum_required(VERSION 3.5)
project(ComputerGraphicsMastersProject VERSION 0.1.0 LANGUAGES C CXX)

cmake_policy(SET CMP0072 NEW)

# Add GLFW
find_package(glfw3 REQUIRED)


# Add Glad
add_subdirectory(external/glad)

# Concepts
add_subdirectory(src/basic_triangle_rendering)
add_subdirectory(src/texturing)
add_subdirectory(src/shading)
add_subdirectory(src/lighting)
add_subdirectory(src/transformations)
add_subdirectory(src/framebuffer_objects)
add_subdirectory(src/model_loading)
add_subdirectory(src/advanced_shaders)
add_subdirectory(src/framebuffer_effects)
add_subdirectory(src/deferred_rendering)
add_subdirectory(src/shadow_mapping)
add_subdirectory(src/particle_systems)
add_subdirectory(src/post_processing_effects)
add_subdirectory(src/terrain_generation)
add_subdirectory(src/gui_integration)
add_subdirectory(src/multi_pass_rendering)
add_subdirectory(src/compute_shaders)
add_subdirectory(src/geometry_instancing)
add_subdirectory(src/multi_threading)
add_subdirectory(src/frame_timing_and_control)
add_subdirectory(src/debugging_and_profiling)
add_subdirectory(src/texture_compression)
add_subdirectory(src/advanced_rendering_techniques)
add_subdirectory(src/custom_shaders)
add_subdirectory(src/scene_graphs)
add_subdirectory(src/virtual_reality_support)
add_subdirectory(src/webgl_integration)
add_subdirectory(src/opengl_interoperability)
add_subdirectory(src/cross_platform_compatibility)
add_subdirectory(src/input_handling)
add_subdirectory(src/audio_integration)
add_subdirectory(src/serialization_and_deserialization)
add_subdirectory(src/error_handling_and_logging)
add_subdirectory(src/resource_management)
add_subdirectory(src/scene_rendering_and_management)
add_subdirectory(src/user_interaction)
add_subdirectory(src/physics_integration)
add_subdirectory(src/networking)
add_subdirectory(src/artificial_intelligence)
add_subdirectory(src/localization_and_internationalization)
add_subdirectory(src/accessibility_features)
add_subdirectory(src/version_control_integration)
add_subdirectory(src/continuous_integration_and_deployment)
add_subdirectory(src/documentation_and_tutorials)
add_subdirectory(src/community_engagement)
add_subdirectory(src/performance_optimization)
add_subdirectory(src/memory_management)
add_subdirectory(src/security_measures)
add_subdirectory(src/continuous_learning_and_improvement)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})